refactor: merge REQUIRE_PRIOR into SKIP_LOW_RATED, improve strategy UX
SKIP_LOW_RATED now also skips when no prior evaluation exists, absorbing
REQUIRE_PRIOR's behaviour. Simplifies strategies from 6 to 5.

Backend: remove REQUIRE_PRIOR enum value, merge logic in
OptimisationSkipEvaluator, update mutual exclusion rules, V40 migration.

Frontend: remove REQUIRE_PRIOR from UI, improve all strategy labels and
descriptions, add disabled button styling (btn-primary/btn-secondary),
add hint text on Add Location form, proxy /actuator through Vite dev
server alongside /api for configurable backend target.

Tests: 607 backend + 151 frontend all passing. New
LocationManagementView test file (8 tests) covers disabled button state
and hint message.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>